[package]
name = "self-limiters"
version = "0.0.0"  # This is set on release in the release workflow
edition = "2021"
include = ["/src"]

[lib]
name = "self_limiters"
crate-type = ["cdylib"]

[features]
unstable = ["clippy"]

[dependencies]
clippy = { version = "*", optional = true }
pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "^0.16", features = ["attributes", "tokio-runtime"] }
pyo3-log = "^0.6.0"
tokio = "^1.20.1"
redis = { version="^0.21.5", features = ["tokio-comp"] }
log = "0.4.17"
