[package]
name = "self-limiters"
version = "0.0.0"  # This is set on release in the release workflow
edition = "2021"
include = ["/src", "pyproject.toml"]

[lib]
name = "self_limiters"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = " >=0.17.2", features = ["extension-module", "abi3-py38"] }
pyo3-log = ">=0.7.0"
log = ">=0.4.17"
pyo3-asyncio = { version = ">=0.17.0", features = ["tokio-runtime"] }
tokio = {version=">=1.20.1", default-features=false, features= ["time", "tokio-macros"]}
redis = { version=">=0.21.5", default-features=false, features = ["aio", "tokio-comp", "ahash", "script"] }
bb8-redis = "0.12.0"

[dev-dependencies]
cargo-llvm-cov = { version = ">=0.4.1" }
clippy = { version = ">=0.0.302" }

[profile.release]
opt-level = "s"
overflow-checks = true
