[project]
name = "timely"
version = "0.1.0"
description = "Distributed async rate-limiting algorithms"
authors = [{ name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" }]
readme = "README.md"
license = { file = "LICENSE", type = 'BSD-3' }
homepage = "https://github.com/snok/timely"
repository = "https://github.com/snok/timely"
keywords = ["distributed", "async", "rate-limit", "rate", "limit", "limiting", "redis", "rust"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Developers',
]

[project.urls]
releases = "github.com/snok/timely/releases"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.black]
line-length = 120
skip-string-normalization = true
quiet = true
preview = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
