[project]
name = "self-limiters"
version = "0.0.6"
description = "Provdes distributed async client rate limiters for using Redis"
authors = [{ name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE", type = 'BSD-3' }
homepage = "https://github.com/snok/self-limiters"
repository = "https://github.com/snok/self-limiters"
keywords = ["distributed", "async", "rate-limit", "rate", "limit", "limiting", "redis", "rust"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Developers',
]

[project.urls]
releases = "github.com/snok/self-limiters/releases"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.black]
line-length = 120
skip-string-normalization = true
quiet = true
preview = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
