[project]
name = "self-limiters"
description = "Distributed async rate limiters, using Redis"
authors = [{ name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE", type = 'BSD-3' }
homepage = "https://github.com/sondrelg/self-limiters"
repository = "https://github.com/sondrelg/self-limiters"
keywords = [
    "distributed",
    "async",
    "rate-limit",
    "rate",
    "limit",
    "limiting",
    "redis",
    "rust",
    "semaphore",
    "token",
    "leaky",
    "bucket",
    "tokenbucket",
]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Developers',
]

[tool.maturin]
bindings = "pyo3"
strip = true

[project.urls]
releases = "https://github.com/sondrelg/self-limiters/releases"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.black]
line-length = 120
skip-string-normalization = true
quiet = true
preview = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
